# hermes-semantic-diff-weaver

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  __init__.py  hermes-semantic-diff-weaver-implementation-plan.md  hermes-semantic-diff-weaver-spec.md  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  decisions.md  evaluation.md  release-checklist.md  security.md
hermes_semantic_diff_weaver/: __init__.py  ast_diff.py  config.py  errors.py  git_diff.py  models.py  obligations.py  path_policy.py  plugin.py  renderer.py  schemas.py  scoring.py  semantic_candidates.py  semantic_interpreter.py  service.py  test_mapper.py  textutil.py
hermes_semantic_diff_weaver/ast_diff/: __init__.py  analyze.py  compare.py  extract.py  limits.py  match.py  types.py
hermes_semantic_diff_weaver/git_diff/: __init__.py  collect.py  limits.py  parse.py  process.py  repository.py  types.py
scripts/: check_coverage.py  verify_hermes.py  verify_wheel.py
tests/: conftest.py
tests/contract/: __init__.py  test_llm_call.py  test_llm_reconciliation.py  test_output_schema.py  test_registration.py  test_schemas.py
tests/evaluation/: test_evaluation.py
tests/fixtures/: evaluation_cases.json
tests/integration/: test_candidate_mapping.py  test_git_collection.py  test_hermes_discovery.py  test_rendering.py  test_service.py  test_vertical_slice.py
tests/performance/: test_performance.py
tests/security/: test_git_inputs.py  test_prompt_injection.py  test_security.py
tests/unit/: test_ast_diff.py  test_ast_extraction.py  (+12 more)
(+5 files in other folders)
