[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "hermes-semantic-diff-weaver"
version = "0.1.0"
description = "Read-only semantic Git diff analysis and risk-ranked test obligations for Hermes Agent."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Hermes Semantic Diff Weaver contributors" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "pydantic>=2.10,<3",
  "PyYAML>=6.0.2,<7",
]

[project.entry-points."hermes_agent.plugins"]
hermes-semantic-diff-weaver = "hermes_semantic_diff_weaver.plugin"

[tool.hatch.build.targets.wheel]
packages = ["hermes_semantic_diff_weaver"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.coverage",
  "/.pytest_cache",
  "/.pytest_tmp",
  "/.venv",
  "/dist",
  "/tests",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
timeout = 30
markers = [
  "performance: bounded performance regression tests",
]

[tool.coverage.run]
branch = true
source = ["hermes_semantic_diff_weaver"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv", ".pytest_tmp", "dist", "tests/fixtures/repositories"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "PTH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004"]
